--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>React • TodoMVC</title>
+	<title>Spark</title>
 	<link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/fa.min.css">
 	<!--[if IE]>
 	<script src="js/ie.js"></script>
 	<![endif]-->
@@ -16,6 +17,7 @@
     <script src="libs/jquery.min.js"></script>
     <script src="libs/lodash.min.js"></script>
     <script src="libs/backbone-min.js"></script>
+    <script src="libs/moment-with-langs.js"></script>
     <script src="/_api/_files/hoodie.js"></script>
     <script src="libs/backbone-hoodie.js"></script>
     <script type="text/jsx" src="js/app.js"></script>
