--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <script src="libs/lodash.min.js"></script>
     <script src="libs/backbone-min.js"></script>
     <script src="libs/moment-with-langs.js"></script>
+    <script src="libs/markdown.min.js"></script>
     <script src="/_api/_files/hoodie.js"></script>
     <script src="libs/backbone-hoodie.js"></script>
     <script type="text/jsx" src="js/app.js"></script>
