--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Spark</title>
-	<link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/theme.css">
+  <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/fa.min.css">
 	<!--[if IE]>
 	<script src="js/ie.js"></script>
